// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when a balance is given 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  numberOfLines={1}
  style={
    Object {
      "color": "#000",
      "fontFamily": "System",
      "fontSize": 17,
      "fontWeight": "600",
      "textAlign": "center",
    }
  }
  virtual={undefined}
>
  ~930.00 🍭
</Text>
`;

exports[`renders correctly when account data is present, but not for the desired asset 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  numberOfLines={1}
  style={
    Object {
      "color": "#000",
      "fontFamily": "System",
      "fontSize": 17,
      "fontWeight": "600",
      "textAlign": "center",
    }
  }
  virtual={undefined}
>
  ...
</Text>
`;

exports[`renders correctly when no balance is given 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  numberOfLines={1}
  style={
    Object {
      "color": "#000",
      "fontFamily": "System",
      "fontSize": 17,
      "fontWeight": "600",
      "textAlign": "center",
    }
  }
  virtual={undefined}
>
  ...
</Text>
`;
